RESOLVED FIXED276229
[WebGPU] https://compute.toys/view/1203 fails to load (works in Chrome)
https://bugs.webkit.org/show_bug.cgi?id=276229
Summary [WebGPU] https://compute.toys/view/1203 fails to load (works in Chrome)
Mike Wyrzykowski
Reported 2024-07-04 09:52:07 PDT
[WebGPU] https://compute.toys/view/1203 fails to load (works in Chrome)
Attachments
rendering in safari, firefox, chrome (3.19 MB, image/png)
2024-07-07 23:45 PDT, Karl Dubost
no flags
Radar WebKit Bug Importer
Comment 1 2024-07-04 09:52:25 PDT
Tadeu Zagallo
Comment 2 2024-07-05 10:06:43 PDT
Karl Dubost
Comment 3 2024-07-07 23:45:54 PDT
Created attachment 471834 [details] rendering in safari, firefox, chrome tested in Safari Technology Preview 18.0 20619.1.20.7 Firefox Nightly 129.0a1 12924.7.4 Google Chrome Canary 128.0.6582.0 6582.0
EWS
Comment 4 2024-07-08 08:04:53 PDT
Committed 280731@main (2f1f2aab9d91): <https://commits.webkit.org/280731@main> Reviewed commits have been landed. Closing PR #30522 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.